--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,64 +19,151 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Button
-            android:background="@drawable/green_button"
+        <LinearLayout
+            android:id="@+id/btn1"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <Button
+                android:background="@drawable/green_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Basic Concepts"
+                android:layout_marginTop="5dp"
+                android:id="@+id/textView2"
+                android:layout_below="@+id/button"
+                android:layout_centerHorizontal="true" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/btn2"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_below="@+id/btn1"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="67dp">
 
         <Button
+            android:layout_marginLeft="40dp"
             android:background="@drawable/green_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button2"
-            android:layout_below="@+id/button"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="67dp" />
+            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Conditionals and Loops"
+                android:layout_marginTop="5dp"
+                android:id="@+id/textView3"
+                android:layout_below="@+id/button2"
+                android:layout_gravity="center"
+
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btn3"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="40dp"
+            android:layout_alignTop="@+id/btn2"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
+
 
         <Button
             android:background="@drawable/green_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button3"
-            android:layout_marginRight="40dp"
-            android:layout_alignTop="@+id/button2"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+             />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Array"
+                android:layout_marginTop="5dp"
+                android:id="@+id/textView4"
+                android:layout_below="@+id/button3"
+                android:layout_gravity="center"
 
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/btn4"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="67dp">
         <Button
             android:background="@drawable/green_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button4"
-            android:layout_below="@+id/button3"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="67dp" />
-
+            />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/btn5"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="40dp"
+            android:layout_alignTop="@+id/btn4"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
         <Button
             android:background="@drawable/green_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button5"
-            android:layout_marginRight="40dp"
-            android:layout_alignTop="@+id/button4"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
+            />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/btn6"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn5"
+            android:layout_marginTop="67dp"
+            android:layout_centerHorizontal="true">
         <Button
             android:background="@drawable/color_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button6"
-            android:layout_below="@id/button4"
-            android:layout_marginTop="67dp"
-            android:layout_centerHorizontal="true" />
+             />
+
+        </LinearLayout>
+
+
+
+
+
+
+
 
     </RelativeLayout>
     </ScrollView>
