--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/home"
             android:icon="@drawable/ic_menu_camera"
             android:title="Home" />
         <item
@@ -11,12 +11,12 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Code Playground" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/glossary"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="glossary" />
+            android:title="Glossary" />
         <item
             android:enabled="false"
-            android:id="@+id/nav_manage"
+            android:id="@+id/invite"
             android:icon="@drawable/ic_menu_share"
             android:title="Inivite Friends" />
     </group>
@@ -24,12 +24,12 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/settings"
                 android:icon="@drawable/ic_menu_manage"
                 android:title="Settings" />
             <item
                 android:enabled="false"
-                android:id="@+id/nav_send"
+                android:id="@+id/rate"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Rate" />
         </menu>
