--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,7 @@
             android:title="Inivite Friends" />
     </group>
 
+    <item android:title="">
         <menu>
             <item
                 android:id="@+id/settings"
