--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -9,8 +9,9 @@
         android:id="@+id/scrollView" >
 
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></TableLayout>
+        <GridView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/gridView" />
     </ScrollView>
 </LinearLayout>
