--- a/app/src/main/res/layout/compiler_web_view.xml
+++ b/app/src/main/res/layout/compiler_web_view.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/compiler_layout">
 
-    <WebView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/web"
-        android:layout_gravity="center" />
+    <!--<WebView-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:id="@+id/web"-->
+        <!--android:layout_gravity="center" />-->
 </FrameLayout>
