--- a/app/src/main/res/drawable/table_btn.xml
+++ b/app/src/main/res/drawable/table_btn.xml
@@ -2,20 +2,26 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
+
     <item android:top="50dp">
         <shape android:shape="rectangle" >
-            <size android:height="20dp" />
+            <size android:height="100dp"
+                android:width="200dp"/>
             <solid android:color="#8BC34A" />
 
         </shape>
 
     </item>
 
+
     <item android:bottom="20dp">
         <shape android:shape="rectangle" >
-            <size android:height="20dp" />
+            <size android:height="40dp"
+                android:width="200dp" />
             <solid android:color="#ffffff" />
         </shape>
     </item>
+
+
 
 </layer-list>
