--- a/app/src/main/res/layout/table_item.xml
+++ b/app/src/main/res/layout/table_item.xml
@@ -23,24 +23,25 @@
 
 
         <TextView
+            android:layout_gravity="center|top"
             android:layout_above="@+id/table_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="20dp"
             android:text="Large Text"
             android:id="@+id/firstText"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            />
 
         <TextView
-            android:layout_alignParentBottom="true"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
             android:layout_above="@+id/table_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
             android:id="@+id/bottomText"
-            />
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="7dp"/>
 
 
     </FrameLayout>
