--- a/app/src/main/res/layout/compiler_web_view.xml
+++ b/app/src/main/res/layout/compiler_web_view.xml
@@ -2,11 +2,54 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/compiler_layout">
+    android:padding="0dp"
+    android:layout_margin="0dp">
 
     <!--<WebView-->
         <!--android:layout_width="fill_parent"-->
         <!--android:layout_height="fill_parent"-->
         <!--android:id="@+id/web"-->
         <!--android:layout_gravity="center" />-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/compiler_layout"
+        ></FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:background="@color/grey">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Run"
+                android:id="@+id/run_button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_gravity="center_horizontal|bottom"
+                />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="▶"
+                android:id="@+id/textView6"
+                android:layout_gravity="center"
+                android:textColor="#27ae60"
+                android:paddingStart="45dp" />
+        </FrameLayout>
+
+    </FrameLayout>
+
 </FrameLayout>
