--- a/app/src/main/res/layout/table_item.xml
+++ b/app/src/main/res/layout/table_item.xml
@@ -24,6 +24,8 @@
 
 
         <TextView
+            android:gravity="center"
+            android:layout_marginTop="5dp"
             android:layout_gravity="center|top"
             android:layout_above="@+id/table_btn"
             android:layout_width="wrap_content"
