--- a/app/src/main/res/layout/viewpager_item.xml
+++ b/app/src/main/res/layout/viewpager_item.xml
@@ -31,17 +31,19 @@
     android:textColor="#000000"
     android:textSize="23sp"
     android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp" />
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true"
+        />
 
     <TextView
-
+        android:textSize="15dp"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/question"
+        android:layout_gravity="center"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
