--- a/app/src/main/res/layout/viewpager_test.xml
+++ b/app/src/main/res/layout/viewpager_test.xml
@@ -69,6 +69,21 @@
 
         />
 
+    <TableLayout
+        android:id="@+id/layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:layout_gravity="center"
+
+        >
+
+
+    </TableLayout>
+
+
     <Button
         android:background="#8BC34A"
         android:layout_width="wrap_content"
@@ -79,6 +94,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_margin= "10dp"/>
+
 
 
 
