--- a/app/src/main/res/layout/viewpager_test.xml
+++ b/app/src/main/res/layout/viewpager_test.xml
@@ -69,6 +69,22 @@
 
         />
 
+    <TableLayout
+        android:layout_below="@+id/questionhead"
+        android:layout_above="@+id/check"
+        android:id="@+id/layout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:stretchColumns="*"
+        >
+
+
+    </TableLayout>
+
+
     <Button
         android:background="#8BC34A"
         android:layout_width="wrap_content"
@@ -79,6 +95,17 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_margin= "10dp"/>
+
+    <Button
+        android:background="#8BC34A"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show answer"
+        android:id="@+id/answer"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin= "10dp"/>
+
 
 
 
